<resources>
    <string name="app_name">My Gamehelper</string>
    <string name="action_settings">Settings</string>
    <string name="data">数据</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="kda">K/D/A</string>
    <string name="result">结果</string>
    <string name="level">Level</string>
    <string name="endtiem">结束时间</string>
    <string name="nosuer">你还未添加一个默认的游戏角色</string>
    <string name="input_userId">请输入账号ID</string>
    <string name="username">用户名</string>
    <string name="cant_find">找不到用户？点这里</string>
    <string name="matchid">比赛编号</string>
    <string name="players">玩家</string>
    <string name="general_statistic">综合统计</string>
    <string name="radar">雷达</string>
    <string name="highest_record">最高纪录</string>
    <string name="summary">摘要</string>
    <string name="recent_match">最近比赛</string>
    <string name="recent_serach">最近查询</string>
    <string name="recent_clear_history">清除历史记录</string>
    <string name="duration_time">持续时间</string>
    <string name="competation_type">比赛模式</string>
    <string name="match_seq">比赛编号</string>
    <string name="match_detail">比赛详情</string>
    <string name="anonymous_player">匿名玩家</string>
    <string name="record">记录</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_account">个人信息</string>
    <string name="login_out">退出</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="comfirm_password">确认密码</string>
    <string name="forget_password">密码问题</string>
    <string name="forget_password_answer">回答</string>
    <string name="concerened">已关注</string>
    <string name="add_concerned">添加关注</string>
    <string name="comfirm">确认</string>
    <string name="wrong_password">密码错误!</string>
    <string name="password_not_equal">两次密码输入不一致!</string>
    <string name="modify_success">修改成功!</string>
    <string name="account_not_exist">用户不存在!</string>
    <string name="sign_up_forget_input_hint">请输入以下信息，便于密码找回</string>
    <string name="information_not_right">输入信息不全</string>
    <string name="password_too_short">请输入至少6位密码</string>
    <string name="input_these_text">请输入以下信息</string>
    <string name="wrong_username">用户名不存在</string>
    <string name="wrong_hint_or_answer">密码问题或回答错误</string>
    <string name="binded">已关注</string>
    <string name="search_others">搜索其他账号</string>
    <string name="this_player_doesnt_play_dota2">该用户不玩Dota，换一个看看吧</string>

    <!-- utils中几个月前 -->
    <string name="minute">分钟</string>
    <string name="minute_ago">分钟前</string>
    <string name="hour_ago">小时前</string>
    <string name="month_ago">个月前</string>
    <string name="year_ago">年前</string>

    <!-- 登录页面 -->
    <string name="login">登陆</string>
    <string name="sign_up">注册</string>
    <string name="fetch_password">密码找回</string>
    <string name="skip_login">跳过登陆</string>
    <string name="sign_in_input_hint">请输入账号和密码</string>
    <string name="sign_up_input_hint">请输入账号和密码</string>
    <string name="forget_hint">忘记密码</string>
    <string name="input_wrong_password_not_equal">输入的密码不一致</string>
    <string name="sign_up_username_hint">请输入手机号</string>
    <string name="input_according_hint">请根据提示输入</string>

    <!-- data fragment -->
    <string name="data_fragment_content_text">搜索并绑定账号</string>

    <!-- radar fragment -->
    <string name="radar_title_picture">雷达图</string>
    <string name="twenty_times">20场</string>

    <!-- dota2 -->
    <string name="radiant">天辉:</string>
    <string name="dire">夜魇:</string>

    <!-- record -->
    <string name="record_kills">最高击杀</string>
    <string name="record_deaths">最高死亡</string>
    <string name="record_assists">最高助攻</string>
    <string name="record_last_hits">最高正补</string>
    <string name="record_denies">最高反补</string>
    <string name="record_gold_per_min">最高每分钟金钱</string>
    <string name="record_ex_per_min">最高每分钟经验</string>
    <string name="record_hero_damage">最高英雄伤害</string>
    <string name="record_tower_damage">最高建筑伤害</string>
    <string name="record_hero_healing">最高治疗</string>

    <string name="recent_twenty_hint">统计数据只显示最近20场比赛</string>
</resources>
