<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_background">

        <ImageButton
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@color/background_transparent"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/sign_in_input_hint" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:hint="@string/username"
        android:inputType="number"
        android:paddingLeft="15sp"
        android:textColor="@color/search_text_white"
        android:textColorHint="@color/search_text_white"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:hint="@string/password"
        android:paddingLeft="15sp"
        android:inputType="textPassword"
        android:textColor="@color/search_text_white"
        android:textColorHint="@color/search_text_white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_sign_in_selector"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forget_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/forget_hint"
        android:textColor="#666666" />
</LinearLayout>