<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_preview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_hero_preview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.3" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center|left"
            android:text="@string/result"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center|left"
            android:text="@string/level"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/endtiem"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_lobby_type"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/endtiem"
                android:textSize="13sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_kda_preview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/endtiem"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>