<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/background_transparent"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/match_detail"
            android:textColor="@color/white_text_with_alpha"
            android:textSize="@dimen/detail_title_seq_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_weight="1"
            android:background="@color/background_transparent"
            android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/duration_time"
                android:textColor="@color/grew_text_with_alpha"
                android:textSize="@dimen/preview_title_text_size" />

            <TextView
                android:id="@+id/tv_duration_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white_text_with_alpha"
                android:textSize="@dimen/detail_title_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/endtiem"
                android:textColor="@color/grew_text_with_alpha"
                android:textSize="@dimen/preview_title_text_size" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white_text_with_alpha"
                android:textSize="@dimen/detail_title_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/competation_type"
                android:textColor="@color/grew_text_with_alpha"
                android:textSize="@dimen/preview_title_text_size" />

            <TextView
                android:id="@+id/tv_competation_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white_text_with_alpha"
                android:textSize="@dimen/detail_title_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/match_seq"
                android:textColor="@color/grew_text_with_alpha"
                android:textSize="@dimen/preview_title_text_size" />

            <TextView
                android:id="@+id/tv_match_seq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white_text_with_alpha"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_match_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>


