<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dota2_preview_padding"
            android:paddingTop="@dimen/dota2_preview_padding">

            <ImageView
                android:id="@+id/img_preview_potrait"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_preview_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_preview_potrait"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text=""
                android:textColor="@color/white_text_with_alpha" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/general_statistic"
                android:textColor="@color/grew_text_with_alpha"
                android:textSize="@dimen/preview_title_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/radar"
                android:textColor="@color/grew_text_with_alpha"
                android:textSize="@dimen/preview_title_text_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/highest_record"
                android:textColor="@color/grew_text_with_alpha"
                android:textSize="@dimen/preview_title_text_size" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_preview_recy"
        android:visibility="gone">

        <include layout="@layout/dota2_preview_listitem_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/dota2_preview_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>